[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/entities/projectiles/DistantCuts.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/fx/smearCut/Smear 01 Vertical 01.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/fx/smearCut/Smear 01 Horizontal 1.png" type="Texture" id=3]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fx1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fx2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fx3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fx4:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "cuts"
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fx1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fx2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fx3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Fx4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[node name="DistantCuts" type="Node2D"]
script = ExtResource( 1 )
damage = 1

[node name="DirectionRaycast" type="RayCast2D" parent="."]

[node name="CutsAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/cuts = SubResource( 5 )

[node name="Fx1" type="Sprite" parent="."]
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )
hframes = 5
frame = 1

[node name="Fx2" type="Sprite" parent="."]
z_index = 2
z_as_relative = false
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="Fx3" type="Sprite" parent="."]
rotation = 1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )
flip_h = true
flip_v = true
hframes = 5
frame = 1

[node name="Fx4" type="Sprite" parent="."]
rotation = -1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 2 )
flip_h = true
flip_v = true
hframes = 6
frame = 1

[node name="CutsArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CutsArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="CutsArea" to="." method="_on_CutsArea_body_entered"]
